# ProjectCourse

./: CMakeLists.txt  README.md  package.xml
CNN/: Cercles_1.h5  Cercles_2.h5  pose.txt
launch/: Some_commands  base.launch  localization.launch  mission.launch  vision.launch
msg/: CroppedImageObject.msg  ObjectPose.msg
scripts/: displaymapmarkers.py  help_functions.py  localization_publisher.py  marker_detection.py  mission_planning.py  path_execution.py  path_planning.py  simple_localization.py  vision_object_classification.py  vision_object_detection.py  vision_object_treatment.py
